wmBiff (0.3.0)
  * wmbiff/Makefile:
    + added charutil.o to OBJS (Mark Hurley).
    + little cosmetic changes and remove wmbiff-master.xpm.
  * wmbiff/Imap4Client.c: removed two unused variables in imap4CheckMail
    (Mark Hurley).
  * wmbiff/charutil.c: added for TrimLeft, TrimRight, TrimFull (also .h)
    (Mark Hurley).
  * wmbiff/wmbiff.c: [ReadLine] removed previous trim leading spaces, added
    TrimFull.  Fixes Debian Bug #95849 (Mark Hurley).
  * wmbiff/wmbiff.c: if a pop3 or imap mailbox read fails and the following
    reads are successful but no mail was in the server, the given mailbox
    would remain reading "XX". Now it updates the counter no matter what the
    read was (Mark Hurley).
  * wmbiff/mboxClient.c: wmbiff would only count as new mails those with "N"
    flags, ignoring those marked "ON" (Rob Funk).
  * wmbiff/Imap4Client.c: fixed reading of quoted imap folders, which some
    IMAPd's do (Rob Funk).
  * README: updated some very obsolete info.

 -- Jordi Mallach <jordi@sindominio.net>  Fri,  16 May 2001 12:16:44 +0200

wmBiff (0.2q1)
  * wmbiff/Client.h: move DEBUG_* macros to wmbiff/Makefile
  * wmbiff/Pop3Client.c:
    + My password contains an  @  character.  This causes
      the pop3 line to be incorrectly parsed by wmbiff.
      * Drop all of the ":" after the pop3 and delimit all values with
        spaces.  This works well, as passwords/user-id's all agree that
        the space is a non-legit value.
         
        Example: assume my password is:  myEmailhasa@init
         
        Old way:
        path.3=pop3:debian4tux:myEmailhasa@init@mail.telocity.com

        New way:
        path.3=pop3:debian4tux myEmailhasa@init mail.telcoity.com
        
        Ahh...before you say it.  "Backward compatibility?" You will
        also find in the patch, a NEW function.  So that the OLD and
        NEW way is easily compatible with all ".wmbiffrc" files.
        
        Dev. Comments: