@@ -1,7 +1,6 @@
-//include <stdio.h>
 #include <stdlib.h>
-//include <ctype.h>
-
+#include <stdio.h>
+#include <string.h>
 #include "charutil.h"
 
 inline int LeftTrim(char *psValue)
