@@ -1,3 +1,9 @@
+wmBiff (0.3.1)
+  * wmbiff/charutil.c: fixed gcc-3.0 implicit warning, but including string.h
+    also cleaned up other includes in same file
+ 
+ -- Mark Hurley <debian4tux@telocity.com>  Wed, 16 May 2001 20:45:49 -0400
+ 
 wmBiff (0.3.0)
   * wmbiff/Makefile:
     + added charutil.o to OBJS (Mark Hurley).
